--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-query": "^5.90.21",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
+    "styled-components": "^6.3.9",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
